--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@types/react-redux": "^7.1.9",
     "typescript": "^4.0.2"
   },
-  "dependencies": {
-    "react": "^16.13.1",
-    "react-redux": "^7.2.1",
-    "redux": "^4.0.5"
+  "peerDependencies": {
+    "react": "*",
+    "react-redux": "*",
+    "redux": "*"
   }
 }
