--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
-  "name": "redux-hooks",
-  "version": "0.0.1",
+  "name": "redux-hooks-next",
+  "version": "0.0.2",
+  "description": "React hooks for react-redux",
   "main": "src/index.ts",
   "author": "vstatsura",
   "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/vstatsura/redux-hooks"
+  },
   "devDependencies": {
     "@types/react-redux": "^7.1.9",
     "typescript": "^4.0.2"
