--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,35 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true,
+    "target": "es6",                          
+    "module": "commonjs",                    
+    "lib": ["es6"],                     
     "allowJs": true,
-    "allowSyntheticDefaultImports": true,
-    "resolveJsonModule": true,
+    "outDir": "build",                          
+    "rootDir": "src",
+    "strict": true,         
+    "noImplicitAny": true,
     "esModuleInterop": true,
-    "isolatedModules": true,
-    "jsx": "react",
-    "lib": ["dom", "es2015", "es2016", "es2017"],
-    "moduleResolution": "node",
-    "noEmit": true,
-    "strict": true,
-    "baseUrl": "./src",
-    "target": "es2015"
+    "resolveJsonModule": true,
+    "declaration": true,
+    "declarationDir": "build/typescript",
   },
+  "include": ["src"],
   "exclude": ["node_modules"]
 }
+
+/*
+{
+  "compilerOptions": {
+    "target": "es5",                          
+    "module": "commonjs",                    
+    "lib": ["es6"],                     
+    "allowJs": true,
+    "outDir": "build",                          
+    "rootDir": "src",
+    "strict": true,         
+    "noImplicitAny": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true
+  }
+}
+*/
